[0, 15, 17]: 2017-07-03
  - support for Unicode supplementary Plane **output** with allow_unicode
    (input was already supported, triggered by
    `this <https://stackoverflow.com/a/44875714/1307905>`_ Stack Overflow Q&A)

[0, 15, 16]: 2017-07-01
  - minor typing issues (reported and fix provided by
    `Manvendra Singh <https://bitbucket.org/manu-chroma/>`_)
  - small doc improvements

[0, 15, 15]: 2017-06-27
  - fix for issue 135, typ='safe' not dumping in Python 2.7
    (reported by Andrzej Ostrowski <https://bitbucket.org/aostr123/>`_)

[0, 15, 14]: 2017-06-25
  - setup.py: change ModuleNotFoundError to ImportError (reported and fix by Asley Drake)

[0, 15, 13]: 2017-06-24
  - suppress duplicate key warning on mappings with merge keys (reported by
    Cameron Sweeney)

[0, 15, 12]: 2017-06-24
  - remove fatal dependency of setup.py on wheel package (reported by
    Cameron Sweeney)

[0, 15, 11]: 2017-06-24
  - fix for issue 130, regression in nested merge keys (reported by
    `David Fee <https://bitbucket.org/dfee/>`_)

[0, 15, 10]: 2017-06-24
  - fix for issue 130, regression in nested merge keys (reported by
    `David Fee <https://bitbucket.org/dfee/>`_)

[0, 15, 10]: 2017-06-23
  - top level PreservedScalarString not indented if not explicitly asked to
  - remove Makefile (not very useful anyway)
  - some mypy additions

[0, 15, 9]: 2017-06-16
  - fix for issue 127: tagged scalars were always quoted and seperated
    by a newline when in a block sequence (reported and largely fixed by
    `Tommy Wang <https://bitbucket.org/twang817/>`_)

[0, 15, 8]: 2017-06-15
  - allow plug-in install via ``install ruamel.yaml[jinja2]``

[0, 15, 8]: 2017-06-15
  - allow plug-in install via ``install ruamel.yaml[jinja2]``

[0, 15, 7]: 2017-06-14
  - add plug-in mechanism for load/dump pre resp. post-processing

[0, 15, 6]: 2017-06-10
  - a set() with duplicate elements now throws error in rt loading