@@ -7,8 +7,8 @@ if False:  # MYPY
 
 _package_data = dict(
     full_package_name='ruamel.yaml',
-    version_info=(0, 15, 18, 'dev'),
-    __version__='0.15.18.dev',
+    version_info=(0, 15, 18),
+    __version__='0.15.18',
     author='Anthon van der Neut',
     author_email='a.van.der.neut@ruamel.eu',
     description='ruamel.yaml is a YAML parser/emitter that supports roundtrip preservation of comments, seq/map flow style, and map key order',  # NOQA
@@ -51,6 +51,7 @@ _package_data = dict(
         deps='ruamel.std.pathlib',
         fl8excl='_test/lib',
     ),
+    rtfd=47359,
 )  # type: Dict[Any, Any]
 
 
